--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "desafio-codex-frontend",
+  "name": "desafio-codex-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
